--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -452,7 +452,7 @@ a {
 #owner {
   padding-top: 70px;
   scroll-snap-align: start;
-  background-color: #fafafa;
+  background-color: #fff;
   min-height: calc(100vh - 45px);
   max-width: 100vw;
   display: -webkit-box;
@@ -473,7 +473,19 @@ a {
 }
 
 #owner img {
-  max-width: 40vh;
+  height: 70vh;
+}
+
+@media (max-width: 850px) {
+  #owner img {
+    width: 80vw;
+    height: auto;
+  }
+}
+
+#owner .subtitle {
+  text-align: left;
+  margin-top: 4vw;
 }
 
 #owner .description {
@@ -492,7 +504,6 @@ a {
 
 #owner .quote {
   scroll-snap-align: start;
-  background-color: #fafafa;
   font-family: 'Vollkorn', serif;
   font-size: 1.2vw;
   font-style: italic;
@@ -511,7 +522,7 @@ a {
 
 #owner .cta {
   text-align: left;
-  margin: 0 0 30 0;
+  margin: 0;
   padding: 0;
 }
 
@@ -562,17 +573,14 @@ a {
 
 #full_bio_modal .modal-body .quote {
   scroll-snap-align: start;
-  background-color: #fafafa;
   font-family: 'Vollkorn', serif;
   font-size: 20px;
   font-style: italic;
   font-weight: 600;
   letter-spacing: normal;
-  text-align: left;
-  line-height: 30px;
   text-transform: none;
   color: #97adce;
-  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 #sandy_labs, #sandy_geo {
@@ -809,5 +817,22 @@ iframe:last-child {
 @media (max-width: 850px) {
   iframe:last-child {
     margin-bottom: 0 !important;
+  }
+}
+
+.separator {
+  color: #6B6B6B;
+  font-weight: 700;
+  text-align: center;
+  font-size: 1.1vw;
+  letter-spacing: 12;
+  margin: 10vw 0 11vw 0;
+}
+
+@media (max-width: 850px) {
+  .separator {
+    letter-spacing: 6;
+    font-size: 3vw;
+    margin: 6vw 0 20vw 0;
   }
 }
