--- a/static/styles.scss
+++ b/static/styles.scss
@@ -380,15 +380,25 @@ ul {
 #owner {
     padding-top: 70px;
     scroll-snap-align: start;
-    background-color: #fafafa;
+    // background-color: #fafafa;
+    background-color: #fff;
     min-height: calc(100vh - 45px);
     max-width: 100vw;
     @include flexCenter(center, center);
 
     img {
-        max-width: 40vh;
+        // max-width: 70vh;
+        height: 70vh;
+        @media (max-width: $mb-width) {
+            width: 80vw;
+            height: auto;
+        }
     }
 
+    .subtitle {
+        text-align: left;
+        margin-top: 4vw;
+    }
     .description {
         color: $text-primary;
         font-weight: 700;
@@ -405,7 +415,7 @@ ul {
 
     .quote {
         scroll-snap-align: start;
-        background-color: #fafafa;
+        // background-color: #fafafa;
         font-family: 'Vollkorn', serif;
         // font-size: 20px;
         font-size: $description;
@@ -425,7 +435,7 @@ ul {
     
     .cta {
         text-align: left;
-        margin: 0 0 30 0;
+        margin: 0;
         padding: 0;
         .btn, .btn-link {
             padding: 0;
@@ -457,18 +467,18 @@ ul {
         }
         .quote {
             scroll-snap-align: start;
-            background-color: #fafafa;
+            // background-color: #fafafa;
             font-family: 'Vollkorn', serif;
             font-size: 20px;
             font-style: italic;
             font-weight: 600;
             letter-spacing: normal;
-            text-align: left;
-            line-height: 30px;
+            // text-align: left;
+            // line-height: 30px;
             text-transform: none;
             color: $quote;
             // border-bottom: $border solid 1rem;
-            margin-top: 1rem;
+            margin-bottom: 1rem;
             // margin-bottom: 1rem;
         }
     }
@@ -701,5 +711,21 @@ iframe:last-child {
     margin-bottom: 0!important;
     @media (max-width: $mb-width) {
         margin-bottom: 0!important;
+    }
+}
+
+.separator {
+    color: #6B6B6B;
+    font-weight: 700;
+    // font-size: 16px;
+    text-align: center;
+    font-size: $title-spaced;
+    letter-spacing: 12;
+    margin: 10vw 0 11vw 0;
+    
+    @media (max-width: $mb-width) {
+        letter-spacing: 6;
+        font-size: $mb-title-spaced;
+        margin: 6vw 0 20vw 0;
     }
 }
