--- a/static/styles.scss
+++ b/static/styles.scss
@@ -2,10 +2,7 @@
 @import './colours';
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;600;700&display=swap');
-// @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300&family=Vollkorn:ital,wght@1,400;1,600;1,700&display=swap');
-@font-face { font-family: Delicious; src: url('Helvetica Neue LTW0697BlkCnObl.otf'); }
 
 
 @mixin flexCenter($justify, $align) {
@@ -35,12 +32,7 @@
 .gradient {
     @include gradient();
 }
-.gradient2 {
-    background: linear-gradient(to right, #30CFD0 0%, #451a7a 100%);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-    -webkit-box-decoration-break: clone;
-}
+
 // ################# NAVBAR START
 #navbar {
 min-height: 50px;
@@ -232,7 +224,6 @@ ul {
 #owner {
     padding-top: 70px;
     scroll-snap-align: start;
-    // background-color: #fafafa;
     background-color: #fff;
     min-height: calc(100vh - 45px);
     max-width: 100vw;
@@ -325,9 +316,8 @@ ul {
 }
 // ################# OWNER END
 
-// ################# SANDY LABS START
-
-#sandy_labs, #sandy_geo, #sandy_intelligence {
+// ################# PROJECTS START
+#sandy_geo, #sandy_intelligence {
     scroll-snap-align: start;
     width: 100vw;
     margin-top: 50px;
@@ -351,12 +341,7 @@ ul {
         }
     }
 }
-
-#sandy_labs {
-
-    margin: 10vw 0;
-}
-// ################# SANDY LABS END
+// ################# PROJECTS END
 // ################################################ SECTIONS END ################################################
 
 // ################# FOOTER START
@@ -376,13 +361,11 @@ ul {
          display: flex;
          flex-wrap: wrap;
          align-items: flex-start;
-        //  align-content: space-around;
          margin: 0 0 5px 0px;
      }
 
      .footer-col {
          width: 25%;
-        //  padding: 0 15px;
         margin-bottom: 20px;
      }
 
@@ -390,7 +373,6 @@ ul {
 @media(max-width: 767px){
     .footer-col {
         width: 50%;
-       //  padding: 0 15px;
     }
 }
 
@@ -399,7 +381,6 @@ ul {
         width: 100%;
         position: relative;
         overflow: hidden;
-       //  padding: 0 15px;
     }
 }
     .footer-heading {
@@ -407,40 +388,24 @@ ul {
         font-weight: 600;
         font-size: 18px;
         margin-bottom: 7px;
-        
     }
 
 
     ul {
         margin: 0;
         padding: 0;
-        // display: flex;
         font-size: 12px;
-        
-        // li {
-            
-        //     // padding: 3px 0 0 0;
-        //     // padding-top: 5px;
-        // }
-    
+
         li a{
             text-decoration: none;
-            // padding: 0 1rem;
             color: $text-secondary;
             transition: all 0.3s ease;
-            // position: relative;
-            // display: block;
-            // font-size: 10px;
         }
     
         a:hover {
-            // background-color: #757575;
             text-decoration: none;
             color: $text-primary;
             padding-left: 1px;
-            // -webkit-transform: scale(1.1);
-            // font-size: 13px;
-            
         }
 
         li:not(:last-child) {
@@ -451,8 +416,6 @@ ul {
     .social-links {
         display: inline block;
         font-size: 1.8rem;
-        // margin-top: 30px;
-        
     }
     .fab {
        color: #1D1D1F;
@@ -481,15 +444,9 @@ ul {
                 width: 100%;
             }
         }
-
     }
  }
 // ################# FOOTER END
-
-.green400 {
-    color: #00DE7E;
-    position: absolute;
-}
 
 iframe{
     width: 80vw;
